--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-试着模块化现在的项目，将淘宝的一些基础js，比如判断是否为价格，活动名称的限制等等基础抽取出来，成为一个base模块。暂时完成这个，接下来结合各个项目，扩展ssd
+试着模块化现在的项目，将淘宝的一些基础js，比如判断是否为价格，活动名称的限制等等基础抽取出来，成为一个base模块。暂时完成这个，接下来结合各个项目，扩展ssss
 
